# rules_nodejs

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  BUILD.bazel  LICENCE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  index.bzl  index.for_docs.bzl  package.bzl  package.json  providers.bzl
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: BUILD.bazel
docs/api/: BUILD.bazel  extensions.md  providers.md  rules.md  toolchains.md
e2e/bazel_6_litmus/: BUILD.bazel  MODULE.bazel  package.json
e2e/bazel_6_litmus_workspace/: BUILD.bazel  WORKSPACE.bazel
e2e/bazel_7_litmus/: MODULE.bazel
examples/parcel/: package-lock.json
internal/: BUILD.bazel  pnpm-lock.yaml  pnpm-workspace.yaml
internal/common/: os_name.bzl
internal/common/test/: params_file.spec.js
internal/js_library/: js_library.bzl
internal/linker/: BUILD.bazel  README.md  index.js  link_node_modules.bzl  link_node_modules.ts
internal/linker/test/: BUILD.bazel  link_node_modules.test.ts
internal/node/: BUILD.bazel  context.bzl  launcher.sh  loader.js  node.bzl  node_patches.js  node_repositories.bzl  node_versions.bzl
internal/npm_install/: BUILD.bazel  bulk_copy.sh  generate_build_file.ts  index.js  npm_install.bzl  yarn-increase-mutex-timeout.patch
internal/pkg_npm/: npm_script_generator.js  pkg_npm.bzl
lib/: BUILD.bazel  extensions.bzl  providers.bzl  rules.bzl  toolchains.bzl  workspace.bzl
lib/internal/repositories/yarn_install/: BUILD.bazel  index.js  pre_process_package_json.js
lib/internal/rules/nodejs_binary_test/: BUILD.bazel  launcher.sh  lcov_merger-js.js  linker.js  loader.js  node_patches.js  require_patch.js  runfiles_bundle.js  runfiles_main.js
lib/internal/rules/pkg_npm/: BUILD.bazel  npm_script_generater.js  packager.js
lib/private/: BUILD.bazel  aspects.bzl  extensions.bzl  pnpm-lock.yaml  providers.bzl  repositories.bzl  rules.bzl  toolchains.bzl
lib/private/aspects/: module_mappings_aspect.bzl  module_mappings_runtime_aspect.bzl  node_modules_aspect.bzl
lib/private/extensions/: node_modules.bzl  nodejs.bzl
lib/private/providers/: declaration_info.bzl  external_npm_package_info.bzl  js_providers.bzl  linkable_package_info.bzl  node_context_info.bzl  node_info.bzl  node_runtime_deps_info.bzl  tree_artifacts.bzl
lib/private/repositories/: nodejs_host_alias.bzl  nodejs_toolchains.bzl
lib/private/repositories/nodejs_download/: attrs.bzl  impl.bzl  well_known.bzl
lib/private/repositories/nodejs_download/data/: node_versions.bzl  yarn_versions.bzl
lib/private/repositories/nodejs_toolchain_configure/: BUILD.bazel.tpl  impl.bzl
lib/private/repositories/yarn_install/: attrs.bzl  impl.bzl
lib/private/repositories/yarn_install/generate_build_file/: BUILD.bazel
lib/private/repositories/yarn_install/generate_build_file/src/: main.ts
lib/private/repositories/yarn_install/pre_process_package_json/: BUILD.bazel
lib/private/repositories/yarn_install/pre_process_package_json/src/: main.ts
lib/private/repositories/yarn_install_via_action/: impl.bzl
lib/private/rules/: directory_file_path.bzl  js_library.bzl  pkg_npm.bzl  yarn_install.bzl
lib/private/rules/nodejs_binary_test/: attrs.bzl  impl.bzl
lib/private/rules/nodejs_binary_test/lcov_merger/: BUILD.bazel
lib/private/rules/nodejs_binary_test/lcov_merger/src/: main.ts
lib/private/rules/nodejs_binary_test/linker/: BUILD.bazel  package.json
lib/private/rules/nodejs_binary_test/linker/src/: main.ts
lib/private/rules/nodejs_binary_test/loader/: BUILD.bazel
lib/private/rules/nodejs_binary_test/loader/src/: main.ts
lib/private/rules/nodejs_binary_test/node_patches/: BUILD.bazel  package.json  tsconfig.json
lib/private/rules/nodejs_binary_test/node_patches/src/: mod.ts  register.ts  runfiles-locator.tests.ts  runfiles-locator.ts
lib/private/rules/nodejs_binary_test/node_patches/src/builtins/: fs-module.ts  subprocess.ts
lib/private/rules/nodejs_binary_test/require_patch/: BUILD.bazel
lib/private/rules/nodejs_binary_test/require_patch/src/: main.ts
lib/private/rules/nodejs_binary_test/runfiles_helper/: BUILD.bazel
lib/private/rules/nodejs_binary_test/runfiles_helper/src/: helper_mod.ts  mod.ts  runfiles.ts
lib/private/rules/nodejs_binary_test/utils/: add_arg.bzl  expand_into_runfiles.bzl  link_mapping.bzl  path_utils.bzl  preserve_legacy_templated_args.bzl  windows_utils.bzl  write_node_modules_manifest.bzl
lib/private/utils/: check_bazel_version.bzl  check_version.bzl  os_name.bzl  platform.bzl  strings.bzl  strings_test.bzl
scripts/: update-nodejs-versions.js
toolchains/node/: BUILD.bazel  node_toolchain.bzl
