load("@build_bazel_rules_nodejs//lib:rules.bzl", "js_library", "nodejs_binary", "nodejs_test")

js_library(
    name = "foo",
    srcs = ["foo.js"],
)

nodejs_binary(
    name = "bar",
    entry_point = "bar.js",
)

nodejs_test(
    name = "bar_2",
    entry_point = "bar.js",
    data = ["foo.js"],
    # TODO When sandboxed code path used, Bazel dumps us in runfiles dir (which should not exist) and populates it
    tags = ["no-sandbox"],
)

# # TODO Generate test.xml on our own so Bazel doesn't try and "help" by spawning a separate action to generate test.xml
# # See src/main/java/com/google/devtools/build/lib/exec/StandaloneTestStrategy.java#createXmlGeneratingSpawn
