load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Required dependency, Skylib v1.4.2
http_archive(
    name = "bazel_skylib",
    sha256 = "66ffd9315665bfaafc96b52278f57c7e2dd09f5ede279ea6d39b2be471e7e3aa",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.4.2/bazel-skylib-1.4.2.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.4.2/bazel-skylib-1.4.2.tar.gz",
    ],
)
load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

# Required dependency, Aspect's Bazel Helpers Library v1.35.0
http_archive(
    name = "aspect_bazel_lib",
    sha256 = "e9505bd956da64b576c433e4e41da76540fd8b889bbd17617fe480a646b1bfb9",
    strip_prefix = "bazel-lib-1.35.0",
    url = "https://github.com/aspect-build/bazel-lib/releases/download/v1.35.0/bazel-lib-v1.35.0.tar.gz",
)
load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies")
aspect_bazel_lib_dependencies()

local_repository(
    name = "build_bazel_rules_nodejs",
    path = "../..",
)

load("@build_bazel_rules_nodejs//lib:workspace.bzl", "nodejs_download", "node_modules_yarn")

nodejs_download(
    name = "nodejs",
    node_version = "20.8.0",
    yarn_version = "1.22.10",
)
register_toolchains("@nodejs//toolchains:all")

node_modules_yarn(
    name = "node_modules",
    package_json = "//:package.json",
    yarn_lock = "//:yarn.lock",
    host_node_bin = "@nodejs_host//:bin/node",
    host_yarn_bin = "@nodejs_host//:bin/yarn",
)
