load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@pnpm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

ts_project(
    name = "linker",
    srcs = [
        "src/main.ts",
    ],
    deps = [
        ":node_modules/@types/node",
    ],
)

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

exports_files([
    "dist/main.js",
])

write_source_files(
    name = "write-dist-artifeacts",
    files = {
        "dist/main.js": ":src/main.js",
    },
)
