load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@pnpm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

ts_project(
    name = "linker",
    srcs = [
        "src/main.ts",
    ],
    deps = [
        ":node_modules/@types/node",
    ],
)

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package_contents",
    srcs = [
        "//internal/linker/dist:main.js",
        "//internal/linker/dist:BUILD.bazel",
        "link_node_modules.bzl",
        "BUILD.bazel",
    ],
    visibility = ["//:__pkg__"],
)
