load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

ts_project(
    name = "generate_build_file",
    srcs = [
        "src/main.ts",
    ],
    deps = [
        ":node_modules/@types/node",
    ],
    visibility = [
        "//lib/internal/repositories/yarn_install:__pkg__"
    ],
)
