load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

ts_project(
    name = "loader",
    srcs = [
        "src/main.ts",
    ],
    deps = [
        ":node_modules/@types/node",
    ],
    visibility = [
        "//lib/internal/rules/nodejs_binary_test:__pkg__"
    ],
)
