load("@aspect_rules_rollup//rollup:defs.bzl", "rollup")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

ts_project(
    name = "node_patches",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = ["src/**/*.tests.ts"],
    ) + [":package.json"],
    deps = [
        ":node_modules/@types/node",
    ],
)

rollup(
    name = "node_patches_bundle",
    entry_points = {
        ":src/register.js": "node_patches",
    },
    srcs = [":node_patches"],
    format = "cjs",
    node_modules = ":node_modules",
    args = ["--external", "path,fs,util"],
    sourcemap = "hidden",
    silent_on_success = True,
    visibility = [
        "//lib/internal/rules/nodejs_binary_test:__pkg__"
    ],
)
